fixed alignment

--- a/blocks/forms/forms.css
+++ b/blocks/forms/forms.css
@@ -221,6 +221,10 @@ label.privacy {
   position: relative;
 }
 
+.hs-submit .actions {
+  margin: 10px auto;
+}
+
 .hs-submit .actions button {
   width: 100%;
   margin-bottom: 0;
@@ -244,7 +248,7 @@ label.privacy {
 
 @media only screen and (min-width: 992px) {
   .hs-submit .actions {
-    margin: 10px auto;
+    margin: 20px auto;
     max-width: 543px;
   }
 }
