--- a/templates/landing-page/landing-page.css
+++ b/templates/landing-page/landing-page.css
@@ -453,3 +453,7 @@ body .thank-you-page h4 {
 .landing-page.thankyou .hero-inner > div:first-child:has(.hero-background) {
   padding: 0;
 }
+
+.landing-page main .section.download-form.forms-container .default-content-wrapper:first-child {
+  padding-top: 0;
+}
